# Livekit_Practice

./: .env.local  .gitignore  main.py  pyproject.toml
00_Basics/: 03_change_agent_instructions.py  04_context_variables.py  05_echo_transcriber_agent.py  06_exit_message.py  07_playing_audio.py  08_repeater.py  09_say_in_voice.py  10_tool_calling.py  11_uninterruptable.py  change_agent_instructions.py  echo_transcriber_agent.py  label_messages.py  listen_and_respond.py
00_Basics/01_listen_and_respond/: agent.py  running_instructions.md
01_rag/: build_rag_data.py  rag_db_builder.py  scrape_docs.py
base_web/: app-config.ts  package-lock.json
